--- a/custom_templates/alarm.jinja
+++ b/custom_templates/alarm.jinja
@@ -31,12 +31,41 @@
 {% macro select_alarm() %}
 	{% set output = namespace(numbers=[]) %}
 	{% set exclude = expand('group.exclude_alarm_entities')|map(attribute='entity_id')|list %}
-	{% set include = states.binary_sensor|selectattr('entity_id','in',expand('group.include_alarm_entities')|map(attribute='entity_id'))|list%}
-	{% set list_sensor = include + states.binary_sensor|rejectattr('entity_id','in',exclude)|selectattr('attributes.device_class','defined')|selectattr('attributes.device_class','in',['window','vibration','opening','occupancy','moving','motion','lock','garage_door','door'])|list%}
+	{% set include = states.binary_sensor|selectattr('entity_id','in',expand('group.include_alarm_entities')|map(attribute='entity_id'))|list %}
+	{% set list_sensor = include + states.binary_sensor|rejectattr('entity_id','in',exclude)|selectattr('attributes.device_class', 'defined')
+		|selectattr('attributes.device_class','in',['window', 'vibration', 'opening', 'occupancy', 'moving', 'motion', 'lock', 'garage_door', 'door'])|list %}
 	{% for states in list_sensor  if states.state != 'unavailable' and states.state != 'unknown' -%}
 	{%- set output.numbers = output.numbers + [states.name ] -%}
 		{%- if loop.last -%}
 		{%- endif -%}
 	{%- endfor %}
 	{{['RESET'] + output.numbers}}
+{% endmacro %}
+
+{% macro list_sensor_entity(sensor_select, print_list_group) %}
+	{% set option = sensor_select %}
+	{% set lists = print_list_group %}
+	{% if option == 'RESET' %}
+	{% else %}
+	{% for device in states.binary_sensor if device.name|lower == option|lower %}
+		{% if device.entity_id in lists %}
+			{{ lists|list|select('ne', device.entity_id)|list }}
+		{%else%}
+			{% set ns = namespace(entities=lists|list|select('ne', device.entity_id)|list)%}
+			{{ ns.entities + [device.entity_id] }}
+		{%- endif -%}
+	{%- endfor -%}
+	{% endif %}
+{% endmacro %}
+
+{% macro list_sensor_name(sensor_select, print_list_group) %}
+	{% set option = sensor_select %}
+	{% set lists = print_list_group %}
+	{% if option == 'RESET' %}
+	{% elif option in lists%}
+		{{ lists|select('ne', option)|list }}
+	{% else %}
+		{% set ns = namespace(entities=lists|select('ne',option)|list) %}
+		{{ ns.entities + [option] }}
+	{% endif %}
 {% endmacro %}
