--- a/custom_templates/alarm.jinja
+++ b/custom_templates/alarm.jinja
@@ -37,10 +37,8 @@
     {% set exclude = expand('group.exclude_alarm_entities') | map(attribute='entity_id') | list %}
 	{% set include = dominios | selectattr('entity_id','in',expand('group.include_alarm_entities') | map(attribute='entity_id')) | list %}
 	{% set list_sensor = include + dominios | rejectattr('entity_id','in',exclude) | list %}
-		{% for states in list_sensor if states.state != 'unavailable' and states.state != 'unknown' -%}
-		{%- set output.numbers = output.numbers + [states.name ] -%}
-			{%- if loop.last -%}
-			{%- endif -%}
+		{% for entities in list_sensor if entities.state != 'unavailable' and states.state != 'unknown' -%}
+			{%- set output.numbers = output.numbers + [entities.name ] -%}
 		{%- endfor %}
 	{{ ['RESET'] + output.numbers }}
 {% endmacro %}
